--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
     <string name="app_name">Tesla Charging Reminder</string>
+    <string name="summary_reminder_title">It\'s time to charge <xliff:g name="car_name">%s</xliff:g></string>
+    <string name="expanded_reminder_description">
+        \t• Battery level: %1$d%%\n\t• Range: <xliff:g name="range">%s</xliff:g>miles\n\t• Est. range: <xliff:g name="est_range">%s</xliff:g> miles
+    </string>
 </resources>
