--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Tesla Charging Reminder</string>
     <string name="summary_reminder_title">It\'s time to charge <xliff:g name="car_name">%s</xliff:g></string>
     <string name="expanded_reminder_description">
-        \t• Battery level: %1$d%%\n\t• Range: <xliff:g name="range">%s</xliff:g>miles\n\t• Est. range: <xliff:g name="est_range">%s</xliff:g> miles
+        • Battery: %1$d%%\n• Range: <xliff:g name="range">%s</xliff:g>miles\n• Est. range: <xliff:g name="est_range">%s</xliff:g> miles
     </string>
 </resources>
