--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
-<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
+<resources>
     <string name="app_name">Tesla Charging Reminder</string>
-    <string name="summary_reminder_title">It\'s time to charge <xliff:g name="car_name">%s</xliff:g> 😋</string>
+    <string name="summary_reminder_title">It\'s time to charge %s 😋</string>
     <string name="expanded_reminder_description">
-        • Battery: %1$d%%\n• Range: <xliff:g name="range">%s</xliff:g>miles\n• Est. range: <xliff:g name="est_range">%s</xliff:g> miles
+        • Battery: %1$d%%\n• Range: %2$.1f miles\n• Est. range: %3$.1f miles
     </string>
     <string name="settings_use_custom_view">Use custom view</string>
     <string name="login_email_hint">Email</string>
